# pronounce

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  IDEAS.md  LAUNCH-READY.md  LAUNCH.md  README.md  SUPPORT.md  glama.json  install.sh  vercel.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPO_TOPICS.md  STAR-DRIVE-STATUS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add-pronunciation.yml  bug.yml  config.yml  feature.yml  source-upgrade.yml
.github/workflows/: build-site.yml  ci.yml  hol-plugin-scanner.yml  indexnow.yml  mcp-registry.yml  pypi.yml
.gstack/: browse-audit.jsonl
completions/: _say-it  say-it.bash
data/: entry-dates.tsv  pronunciations.tsv
docs/: .indexnow-key  404.html  about.html  browse.html  faq.html  feed.atom  hall-of-shame.html  index.html  llms-full.txt  llms.txt  manifest.webmanifest  quiz.html  quiz.js  random.html  receipts.html  robots.txt  scoreboard.html  script.js  sitemap-images.xml  sitemap-index.xml  sitemap-seo.xml  sitemap.xml  stats.html  style.css  sw.js  v1.html  zh.html
docs/api/: categories.json  openapi.json  stats.json  words.json
docs/audio/: manifest.json
docs/category/: abbreviation.html  acronym.html  cli-tool.html  cs-term.html  person.html  product.html  project.html  tool.html
hf-dataset/: README.md  pronunciations.csv  pronunciations.jsonl
integrations/: README.md
mcp-server/: Dockerfile  README.md  pyproject.toml  server.json  server.py
mcp-server/npm/: README.md  index.js  package.json
pitch/: README.md  ctx.json  deck.pptx  storyboard-zh.json  storyboard.json  tts-build-zh.py  tts-build.py
tools/: add-batch.mjs  add-batch10.mjs  add-batch11.mjs  add-batch12.mjs  add-batch13.mjs  add-batch14.mjs  add-batch2.mjs  add-batch3.mjs  add-batch4.mjs  add-batch5.mjs  add-batch6.mjs  add-batch7.mjs  add-batch8.mjs  add-batch9.mjs  audit-listen.sh  batch13.json  batch14.json  build-chrome-dict.py  build-entry-dates.py  build-hf-dataset.py  build-scoreboard.py  build-seo.py  build-site.sh  build-v2-bundle.sh  build-v2-data.py  indexnow-submit.sh  lint-dict.sh  make-audio-all.py  make-demo.py  make-icons.py  make-og-all.py  make-og.py  publish-marketplace.sh  smoke-test.sh
(+7727 files in other folders)
