[project]
name = "pronounce-mcp"
version = "0.1.0"
description = "MCP server for pronounce.renlab.ai — look up how engineers actually pronounce project / product / jargon names from any MCP-aware client."
authors = [{name = "Pronounce community"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0,<2",
]
keywords = ["mcp", "model-context-protocol", "pronunciation", "developer-tools", "claude"]

[project.urls]
Homepage = "https://pronounce.renlab.ai"
Repository = "https://github.com/anzy-renlab-ai/pronounce"
Issues = "https://github.com/anzy-renlab-ai/pronounce/issues"

[project.scripts]
pronounce-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
