[project]
name = "pronounce-mcp"
version = "0.1.0"
description = "MCP server for pronounce.renlab.ai — look up how engineers actually pronounce project / product / jargon names from any MCP-aware client."
authors = [{name = "Pronounce community"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0,<2",
]
keywords = ["mcp", "model-context-protocol", "pronunciation", "developer-tools", "claude"]

[project.urls]
Homepage = "https://pronounce.renlab.ai"
Repository = "https://github.com/anzy-renlab-ai/pronounce"
Issues = "https://github.com/anzy-renlab-ai/pronounce/issues"

[project.scripts]
pronounce-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# only-include, NOT packages=["."]. With packages=["."] hatchling ships the whole
# directory into the site-packages ROOT: Dockerfile, README.md, pyproject.toml,
# server.json — and the npm/ subdir, which would become an importable top-level
# `npm` package. server.py is the entire runtime (the `pronounce-mcp` entry point
# is `server:main`); nothing else belongs in the wheel.
only-include = ["server.py"]
sources = ["/"]

[tool.hatch.build.targets.sdist]
only-include = ["server.py", "pyproject.toml", "README.md"]
